# json-typings

./: .gitattributes  Cargo.toml  LICENSE.txt  README.md  build.rs  example_config.toml
.github/workflows/: release.yml
benches/: typing.rs
data/: sample_a.json
src/: interface.rs  items.rs  lib.rs  literal.rs  namespace.rs  nesting_level.rs  path.rs  read_json.rs  regex.rs  settings.rs  strategy.rs  typing.rs  union.rs  utils.rs  validators.rs
