[package]
name = "json-typings"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
ijson = "0.1.3"
json = "0.12.4"
serde_json = "1.0.68"
serde-aux = "3.0.1"
itertools = "0.10.1"
ordered-float = "2.8.0"
unicode-segmentation = "1.8.0"
clap = "2.33.3"
config = "0.11.0"
lazy_static = "1.4.0"
fancy-regex = "0.7.1"
convert_case = "0.4.0"
parking_lot = "0.11.2"
if_chain = "1.0.2"
petgraph = "0.6.0"

[dev-dependencies]
criterion = "0.3.5"
pretty_assertions = "1.0.0"

[profile.release]
debug = 1

[[bench]]
name = "typing"
harness = false

[[bin]]
name = "jsontypings"
path = "src/bin/main.rs"
